last commit did't settle sizing issue on mobile

--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {background-color: yellow;
         span {background-color: white; 
             margin-left: 45px; margin-top: 24px;
             display: inline-block; height: 96px; 
-            width: 25%; text-align: center;
+            width: auto; text-align: center;
             font-family: 'Courier New', Courier, monospace;
             line-height: 96px;
         }
